[workspace]
members = [
    "os",
    "libr",
    "config",
    "user/power_3",
    "user/power_5",
    "user/power_7",
    "user/sleep",
    "user/load_fault",
    "user/store_fault",
    "user/sbrk_test",
    "user/init",
    "user/shell",
]
resolver = "3"

[profile.release]
debug = true
opt-level = 0
