[workspace]
members = [
    "os",
    "easy-fs",
    "easy-fs-fuse",
    "libr",
    "config",
    "user/sleep",
    "user/load_fault",
    "user/store_fault",
    "user/sbrk_test",
    "user/init",
    "user/shell",
    "user/exit",
    "user/stack_overflow",
    "user/forktree",
    "user/cat_filea",
    "user/fantastic_text",
    "user/filetest_simple",
    "user/forktest",
    "user/forktest2",
    "user/huge_write",
    "user/matrix",
    "user/forktest_simple",
    "user/sleep_simple",
    "user/usertests",
    "user/yield_test",
    "user/hello_world",
    "user/cat",
    "user/args",
    "user/echo",
    "user/pipetest",
    "user/pipe_large_test",
    "user/sig_sample",
    "user/priv_inst",
    "user/priv_csr",
    "uniprocessor",
]
resolver = "3"

[profile.release]
debug = true
opt-level = 3
