[package]
name = "os"
version = "0.1.0"
edition = "2024"

[dependencies]
sbi-rt = { version = "0.0.3", features = ["legacy"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
riscv = { version = "0.13.0" }
config = { path = "../config" }
linked_list_allocator = "0.10.5"
bitflags = "*"
xmas-elf = "*"
log = "*"
